ci/k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: cromega/blog:latest
          imagePullPolicy: Always
