ci/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
