ci/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  rules:
  - host: alphaandthecromega.platform.sublimia.nl
    http:
      paths:
      - path: /
        backend:
          serviceName: blog
          servicePort: 8000
